--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div>
                 <h3>GET NOTIFIED FIRST</h3>
                 <h4>Get an email of our latest collection</h4>
-                <input type="email" placeholder="Your email here"><button class="b-buttons">Submit</button>
+                <input type="email" placeholder="Your email here"><button class="s-buttons">Submit</button>
                 
             </div>
             
