--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
 
         <div class="container shoes" id="Shoes">
-            <h3>Backpack</h3> 
+            <h3>Shoes</h3> 
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                   <div class="card h-100">
