--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="images/Reverium-logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -262,7 +262,7 @@
         <div class="pinkish-bg d-flex justify-content-center align-items-center" id="Subscribe">
             <div>
                 <h3>GET NOTIFIED FIRST</h3>
-                <h4>Get an email of our latest collection</h4>
+                <h5>Get an email of our latest collection</h5>
                 <input type="email" placeholder="Your email here"><button class="s-buttons">Subscirbe</button>
                 
             </div>
